Added missing Log In button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
               <li class="nav-item active">
                 <%= link_to 'Sign Up', createaccount_path , :class => "nav-link"%>
               </li>
+              <li class="nav-item active">
+                <%= link_to 'Log In', login_path , :class => "nav-link"%>
+              </li>
           <% end %>
         
           <% if is_admin_html %>
