Edits done last night/ whats left

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -81,7 +81,7 @@ table, th, td {
 
 
 
-
+<!--
 <table style="width:100%">
   
    <tr>
@@ -96,18 +96,18 @@ table, th, td {
     <th>    
 <body> 
     <div> 
-        <select id="select">                                              
+        <select id="select11">                                              
             <option value="0">Missing</option> 
             <option value="1">Submitted</option> 
         </select>  
     </div> 
 </body>
     </th>
-    <th><select id="select">                                              
+    <th><select id="select12">                                              
             <option value="0">Missing</option> 
             <option value="1">Submitted</option> 
         </select>  </th>
-    <th><select id="select">                                              
+    <th><select id="select13">                                              
             <option value="0">Missing</option> 
             <option value="1">Submitted</option> 
         </select>  </th>
@@ -117,28 +117,28 @@ table, th, td {
     <th>    
 <body> 
     <div> 
-        <select id="select">                                              
+        <select id="select21">                                              
             <option value="0">Missing</option> 
             <option value="1">Approved</option> 
-            <option value="1">Inadequate</option> 
+            <option value="2">Inadequate</option> 
         </select>  
     </div> 
 </body>
     </th>
-    <th><select id="select">                                              
+    <th><select id="select22">                                              
             <option value="0">Missing</option> 
             <option value="1">Approved</option> 
-            <option value="1">Inadequate</option> 
+            <option value="2">Inadequate</option> 
         </select>  </th>
-    <th><select id="select">                                              
+    <th><select id="select23">                                              
             <option value="0">Missing</option> 
             <option value="1">Approved</option> 
-            <option value="1">Inadequate</option> 
+            <option value="2">Inadequate</option> 
         </select>  </th>
   </tr>
 </table>
 
 
-
+-->
 
 </div>
