--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -18,8 +18,8 @@
         <body>
           <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" style=margin-top:20px></div>
           <script>
+          
             function onSignIn(googleUser) {
-              // Useful data for your client-side scripts:
               var profile = googleUser.getBasicProfile();
               // The ID token you need to pass to your backend:
               // var id_token = googleUser.getAuthResponse().id_token;
@@ -27,26 +27,16 @@
               document.getElementById('form_name').value = profile.getName();
               document.getElementById('form_email').value = profile.getEmail();
               document.getElementById('submit').submit();
+              
+              // Sign out after submitting form to fix redirect loop
+              gapi.auth2.getAuthInstance().signOut();
             }
           </script>
-          
-          <a href="#" onclick="signOut();">Sign out</a>
-            <script>
-              function signOut() {
-                var auth2 = gapi.auth2.getAuthInstance();
-                auth2.signOut().then(function () {
-                  console.log('User signed out.');
-                });
-              }
-            </script>
         </body>
       </html>
       <br>
     <% if params[:action] == "edit" %>
       <%= render "layouts/confirm_update", object: @student, as: 'object' %>
-    <% else %>
-      <%= f.submit "Create Account", :class => "btn btn-primary mt-4" %>
-      </br>
     <% end %>
   <% end %>
 </div>
