Updated site name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CrewCreator</title>
+    <title>MomentumDash</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -100,7 +100,7 @@
     <!-- Footer -->
   <footer class="page-footer font-small blue">
     <hr>
-      <p class="ml-5">Crew Creator 2019</p>
+      <p class="ml-5">MomentumDash 2020</p>
   </footer>
   
   </body>
