--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -65,16 +65,7 @@
        <a class="disabled"><strong>Time:</strong> <%= @team.scrum_time.strftime("at %I:%M%p") %></a>
       </div>
   </div>
-  <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
-    <div class="card-header">
-      <h5 class="card-title">Iteration Tracker</h5>
-    </div>
-    <div class="card-body">
-       <a class="disabled"><strong>Iteration1:</strong> <%= @team.iteration1 %></a>
-       <a class="disabled"><strong>Iteration2:</strong> <%= @team.iteration2 %></a>
-       <a class="disabled"><strong>Iteration3:</strong> <%= @team.iteration3 %></a>
-    </div>
-  </div>
+  
   
 </div>
 
@@ -91,20 +82,44 @@ table, th, td {
 
 
 
-
-
-
 <body>
 
 
 
 <% if is_instructor_html() %>
 
-<!--
+
 <table style="width:100%">
  <%= form_with scope: :team, local: true do |form| %>  
-  
+   <tr>
+       <th><%= form.label "Iteration 1: " %>
+       </th>
+       <th><%= form.label "Iteration 2: " %>
+       </th>
+       <th><%= form.label "Iteration 3: " %>
+       </th>
+       <th><%= form.label "Iteration 4: " %>
+   </th>
+   </tr>
+ 
+  <tr>
+   
+   <th>
+   <a class="disabled"> <%= @team.iteration1 %></a>
+   </th>
+   <th>
+   <a class="disabled"> <%= @team.iteration2 %></a>
+   </th>
+    <th>
+      <a class="disabled"> <%= @team.iteration3 %></a>
+   </th>
+     <th>
+      <a class="disabled"> <%= @team.iteration3 %></a>
+   </th>
+ </tr>
+ 
  <tr>
+   
    <th><%= form.label "Iteration 1: " %>
    <%= form.select(:iteration1, options_for_select([['submitted', 'submitted'], ['missing', 'missing']]), {include_blank: true}) %>
    </th>
@@ -112,6 +127,9 @@ table, th, td {
    <%= form.select(:iteration2, options_for_select([['submitted', 'submitted'], ['missing', 'missing']]), {include_blank: true}) %>
    </th>
     <th><%= form.label "Iteration 3: " %>
+   <%= form.select(:iteration3, options_for_select([['submitted', 'submitted'], ['missing', 'missing']]), {include_blank: true}) %>
+   </th>
+    <th><%= form.label "Iteration 4: " %>
    <%= form.select(:iteration3, options_for_select([['submitted', 'submitted'], ['missing', 'missing']]), {include_blank: true}) %>
    </th>
  </tr>
@@ -125,7 +143,7 @@ table, th, td {
 
 
 </body>
--->
+
 <!--
 <% else if is_student_on_team(current_user, @team) %>
 
