--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -55,6 +55,9 @@
    <%= label_tag :iteration3 , nil , :class => "mt-4" %>
     <%= form.text_field :iteration3, id: "iteration3", placeholder: "Missing", :class => " form-control" %>
   
+  <%= label_tag :iteration4 , nil , :class => "mt-4" %>
+    <%= form.text_field :iteration4, id: "iteration3", placeholder: "Missing", :class => " form-control" %>
+  
     <br>
     
     <%= form.submit id: "submit-team" , :class => "btn btn-primary" %>
