--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -23,10 +23,10 @@
 <% end %>
 
 <hr>
-<%= link_to 'Back', courses_path, id: 'back', :class => "btn btn-warning float-right mt-1 mr-5"%>
 <% if has_section_html(@section.id) %>
-  <%= button_to "New Project", { action: :new, controller: :projects}, method: :get, id: "new_project" , class: "btn btn-success ml-5" %>
+  <%= button_to "New Project", { action: :new, controller: :projects}, method: :get, id: "new_project" , class: "btn btn-success float-right mt-3 ml-5 mr-5" %>
 <% end %>
+<%= link_to 'Back', courses_path, id: 'back', :class => "btn btn-warning mt-3 ml-5"%>
 
 
 
