Fixed project description text falling outside of intended area

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -55,7 +55,7 @@
       </div>
       
       <div class="card-body text-center">
-        <p class="card-title d-inline text-muted float-left"><%= project.description %></p>
+        <p class="card-title d-inline text-muted float-center"><%= project.description %></p>
         <br>
         <% project.skills.each do |skill| %>
           <button class="btn btn-info disabled ml-2"><%= skill.name %></button>
