--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -58,7 +58,7 @@
         <p class="card-title d-inline text-muted float-center"><%= project.description %></p>
         <br>
         <% project.skills.each do |skill| %>
-          <button class="btn btn-info disabled ml-2"><%= skill.name %></button>
+          <button class="btn btn-info disabled mt-3 ml-2"><%= skill.name %></button>
         <% end %>
       </div>
       
