--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -89,6 +89,34 @@ table, th, td {
 <% if is_instructor_html() %>
 
 
+<h2> iterations</h2>
+<% @team.iterations.each do |iterations| %>
+  <p>
+    <strong>status:</strong>
+    <%= iterations.status %>
+  </p>
+ 
+  <p>
+    <strong>Comments:</strong>
+    <%= iterations.comments %>
+  </p>
+<% end %>
+
+<h2> Add a iteration </h2>
+<%= form_with(model: [ @team, @team.iterations.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :status %><br>
+     <%= form.select(:status, options_for_select([['submitted', 'submitted'], ['missing', 'missing']]), {include_blank: true}) %>
+  </p>
+  <p>
+    <%= form.label :comments %><br>
+    <%= form.text_area :comments %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
+<!--
 <table style="width:100%">
  <%= form_tag  iter_path, :method => "post" do |form| %> 
  
@@ -151,75 +179,50 @@ table, th, td {
 
 </body>
 
-<!--
+
 <% else if is_student_on_team(current_user, @team) %>
 
-   <table style="width:100%">
-
+<table style="width:100%">
+ <%= form_tag  iter_path, :method => "post" do |form| %> 
+ 
    <tr>
-    <th></th>
-    <th>Iteration 0</th>
-    <th>Iteration 1</th>
-    <th>Iteration 2</th>
-  </tr>
-
+       <th><%= label_tag "Iteration 1 Status: " %>
+       <a class="disabled"> <%= @team.status1 %></a>
+       </th>
+      <th><%= label_tag "Iteration 2 Status: " %>
+       <a class="disabled"> <%= @team.status2 %></a>
+       </th>
+       <th><%= label_tag "Iteration 3 Status: " %>
+       <a class="disabled"> <%= @team.status3 %></a>
+       </th>
+       <th><%= label_tag "Iteration 4 Status: " %>
+       <a class="disabled"> <%= @team.status4 %></a>
+       </th>
+   </th>
+   </tr>
+ 
   <tr>
-    <th>Student</th>
-        <th>   
-      
-<body> 
-    <div> 
-        <select id="select11">                                              
-            <option value="0">Missing</option> 
-            <option value="1">Submitted</option> 
-        </select>  
-    </div> 
-</body>
-    </th>
-    <th><select id="select12">                                              
-            <option value="0">Missing</option> 
-            <option value="1">Submitted</option> 
-        </select>  </th>
-    <th><select id="select13">                                              
-            <option value="0">Missing</option> 
-            <option value="1">Submitted</option> 
-        </select>  </th>
-        
-        <tr>
-    <th>Instructor</th>
-    <th>    
-<body> 
-    <div> 
-        <select id="select21">                                              
-            <option value="0">Missing</option> 
-            <option value="1">Approved</option> 
-            <option value="2">Inadequate</option> 
-        </select>  
-    </div> 
-</body>
-    </th>
-    <th><select id="select22">                                              
-            <option value="0">Missing</option> 
-            <option value="1">Approved</option> 
-            <option value="2">Inadequate</option> 
-        </select>  </th>
-    <th><select id="select23">                                              
-            <option value="0">Missing</option> 
-            <option value="1">Approved</option> 
-            <option value="2">Inadequate</option> 
-        </select>  </th>
-  </tr>
+   
+   <th>
+   <a class="disabled"> <%= @team.iteration1 %></a>
+   </th>
+   <th>
+   <a class="disabled"> <%= @team.iteration2 %></a>
+   </th>
+    <th>
+      <a class="disabled"> <%= @team.iteration3 %></a>
+   </th>
+     <th>
+      <a class="disabled"> <%= @team.iteration4 %></a>
+   </th>
+ </tr>
+ 
 
-
-<<<<<<< HEAD
-</div>
-
+  
 </table>
-
-<% end %>
-<% end %>
-=======
 -->
+<% end %>
+<% end %>
+<% end %>
 
 
-</body>
