--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -72,17 +72,17 @@
               <% if team.version_control_link.present? %>
                 <a class="btn btn-info" href=<%= team.version_control_link %> target='_blank'>Version Control</a>
               <% else %>
-                <!--<a class="btn btn-info">Version Control</a>--!>
+                <a class="btn btn-info" disabled>Version Control</a>
               <% end %>
               <% if team.production_link.present? %>
                 <a class="btn btn-info" href=<%= team.production_link %> target='_blank'>Production URL</a>
               <% else %>
-                <!--<a class="btn btn-info">Production URL</a>!-->
+                <a class="btn btn-info" disabled>Production URL</a>
               <% end %>
               <% if team.management_link.present? %>
                 <a class="btn btn-info" href=<%= team.management_link %> target='_blank'>Team Management</a>
               <% else %>
-                <!--<a class="btn btn-info">Team Management</a>!-->
+                <a class="btn btn-info" disabled>Team Management</a>
               <% end %>
               <br></br>
               <!--
@@ -91,7 +91,7 @@
                 <div class="progress-bar bg-warning" role="progressbar" style="width: 0%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                 <div class="progress-bar bg-danger" role="progressbar" style="width: 43%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              !-->
+              
               <hr>
           <% end %>
         </div>
