--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -74,9 +74,7 @@
         <div class="card-footer text-center">
           <% project.teams.each do |team| %>
               <%= link_to "View " + team.name, team_path(team) , class: "btn btn-primary mr-5"%>
-              
-            <p><%="Last updated at: "%><%= team.updated_at.strftime('%m/%d/%Y %I:%M %p').%></p>
-              
+            
               <% if team.version_control_link.present? %>
                 <a class="btn btn-info" href=<%= team.version_control_link %> target='_blank'>Version Control</a>
               <% else %>
@@ -92,7 +90,8 @@
               <% else %>
                 <!--<a class="btn btn-info">Team Management</a>!-->
               <% end %>
-              <br></br>
+              <br><br>
+              <p class="text-muted"><%="Last updated at: "%><%= team.updated_at.strftime('%m/%d/%Y %I:%M %p')%></p>
               <!--
               <div class="progress">
                 <div class="progress-bar bg-success" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
