--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -91,7 +91,7 @@
                 <!--<a class="btn btn-info">Team Management</a>!-->
               <% end %>
               <br><br>
-              <p class="text-muted"><%="Last updated at: "%><%= team.updated_at.strftime('%m/%d/%Y %I:%M %p')%></p>
+              <p class="text-muted"><%="Last updated at: "%><%= team.updated_at.strftime('%a, %b %d, %Y %I:%M %p')%></p>
               <!--
               <div class="progress">
                 <div class="progress-bar bg-success" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
