--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -103,7 +103,7 @@ table, th, td {
 
 
 
-<% if is_instructor_html() %>
+<% if is_instructor_html() || is_student_on_team(current_user, @team) %>
 
 
 <h2> iterations</h2>
@@ -150,7 +150,7 @@ table, th, td {
 
 </body>
 
-
+<!--
 <% else if is_student_on_team(current_user, @team) %>
 
 <table style="width:100%">
@@ -191,6 +191,7 @@ table, th, td {
 
   
 </table>
+-->
 <% end %>
 <% end %>
 
