Fixed project view buttons

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -75,8 +75,8 @@
       <% unless project.teams.empty? %>
         <div class="card-footer text-center">
           <% project.teams.each do |team| %>
-              <%= link_to "View " + team.name, team_path(team) , class: "btn btn-primary mr-5"%>
-            
+              <%= link_to "View " + team.name, team_path(team) , class: "btn btn-primary"%>
+              <br><br>
               <% if team.version_control_link.present? %>
                 <a class="btn btn-info" href=<%= team.version_control_link %> target='_blank'>Version Control</a>
               <% else %>
