--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -45,6 +45,6 @@
     <br>
     
    
-    <%= form.submit id: "submit-team" , :class => "btn btn-primary" %>
+    <%= form.submit id: "submit-team" , :class => "btn btn-primary mt-4" %>
   <% end %>
 </div>
